--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 
-    <nav id="nav-main " class="navbar sticky-top navbar-expand-lg navbar-light bg-light ">
+    <nav id="nav-main " class="navbar fixed-top navbar-expand-lg navbar-light bg-light ">
         <a class="navbar-brand" href="index.html"><i class="fas fa-music"></i></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -65,29 +65,21 @@
         </div>
     </nav>
 
-    <!--About-->
-    <section id="about">
-        <div class="section-content">
-            <div class="container">
-                <div class="col-md-10">
-                    <div class="about-text">
-                        <h3>About me</h3>
-                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima culpa nostrum voluptates praesentium quia, quae, dolor aperiam possimus architecto, tempore unde! Quasi fugit voluptate, maiores adipisci commodi nemo rem cumque.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error eum mollitia sit dolorem autem qui possimus ex voluptate, voluptatibus iste unde numquam illum, molestiae reprehenderit, eligendi. Illum quod esse voluptatibus.</p>
 
-                        <h5>Follow me on the web</h5>
-                        <a href="" class="btn btn-sm btn-secondary-outline">twitter</a>
-                        <a href="" class="btn btn-sm btn-secondary-outline">facebook</a>
-                        <a href="" class="btn btn-sm btn-secondary-outline">youtube</a>
-                    </div>
-                </div>
+    <header class="masterhead">
+        <div class="container d-flex align-items-center h-100">
+            <div id="panel" class="mx-auto text-center">
+                <h1 class="mx-auto my-0 text-uppercase">
+                    <p>XXVIII Concorso Musicale Nazionale</p>
+                    <p>Gian Galeazzo Visconti</p></h1>
+                <!--<h2 class="text-white-50 mx-auto mt-2 mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>-->
             </div>
         </div>
-    </section>
-    <img src="img/chords-sheet-on-piano2.jpg" alt="" />
+    </header>
+
 
     <!--Carousel-->
-    <section id="carousel">
+    <!--<section id="carousel">
         <div id="carousel-home" class="carousel slide carousel-fade" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carousel-home" data-slide-to="0" class="active"></li>
@@ -106,7 +98,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>-->
 
     <!--Footer-->
     <footer id="footer-main">
