Add Regolamento section

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Concorso Musicale Gian Galeazzo Visconti</title>
+
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
 
     <!-- Lux theme-->
     <link rel="stylesheet" href="css/Lux/bootstrap.css" />
@@ -15,32 +18,30 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="css/fontawesome-free-5.13.0-web/css/all.css" />
     <link rel="stylesheet" href="css/fontawesome-free-5.13.0-web/js/all.js" />
-    
+
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/Styles.css">
-
-    <title>Concorso Musicale Gian Galeazzo Visconti</title>
 </head>
 <body>
-
+    <!--NavBar-->
     <nav id="nav-main " class="navbar fixed-top navbar-expand-lg navbar-light bg-light ">
-        <a class="navbar-brand" href="index.html"><i class="fas fa-music"></i></a>
+        <a class="navbar-brand js-scroll-trigger" href="index.html"><i class="fas fa-music"></i></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Regolamento</a>
+                    <a class="nav-link js-scroll-trigger" href="#Regolamento">Regolamento</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Commissione</a>
+                    <a class="nav-link js-scroll-trigger" href="#">Commissione</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Iscrizione</a>
+                    <a class="nav-link js-scroll-trigger" href="#">Iscrizione</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Premi</a>
+                    <a class="nav-link js-scroll-trigger" href="#">Premi</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Concerti</a>
@@ -65,18 +66,61 @@
         </div>
     </nav>
 
-
+    <!--Main Header-->
     <header class="masterhead">
         <div class="container d-flex align-items-center h-100">
             <div id="panel" class="mx-auto text-center">
-                <h1 class="mx-auto my-0 text-uppercase">
-                    <p>XXVIII Concorso Musicale Nazionale</p>
-                    <p>Gian Galeazzo Visconti</p></h1>
-                <!--<h2 class="text-white-50 mx-auto mt-2 mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>-->
+                <p>
+                    <h1 class="display-4">XXVIII Concorso Musicale</h1>
+                </p>
+                <p>
+                    <h1 class="display-4">Gian Galeazzo Visconti</h1>
+                </p>
+                <hr class="w-25 my-4" />
+                <p>
+                    <h5>Scadenza invio: 8 Maggio</h5>
+                </p>
+                <p>
+                    <h5>Publicazione graduatorie: 29 Maggio</h5>
+                </p>
             </div>
         </div>
     </header>
 
+    <!--Regolamento-->
+    <section id="Regolamento">
+        <div class="regolamento-content">
+            <div class="container">
+                <h2>Regolamento</h2>
+                <p>
+                    La Fondazione “Luigi Granese” e la Scuola di Musica “G.Visconti”, visto il perdurare dello stato di allerta dovuto al CORONAVIRUS,  <strong>modificano il  XXVIII Concorso Musicale precedentemente bandito, per l’anno 2020, con una versione ONLINE.</strong>
+                </p>
+                <p>
+                    I concorrenti potranno partecipare inviando un file video unico della durata massima di 5 minuti con un programma libero composto al massimo da due brani.  Il video delle dimensioni massimo di 1 giga,  dovrà inquadrare esecutore e strumento, la registrazione che dovrà essere effettata dall'uscita del presente bando, deve essere realizzata senza interruzioni. Il file, unitamente alla domanda d'iscrizione e la ricevuta della donazione di € 10,00 intestato alla protezione civile dovrà essere inviato tramite WETRANSFER entro venerdì 8 Maggio con causale "Il Concorso Musicale Visconti non si ferma".
+                </p>
+                <p>
+                    Il concorso si articola nelle seguenti sezioni:
+                    <ul>
+                        <li>A - Solisti: (pianoforte, archi, chitarra, flauto e clarinetto)</li>
+                        <li>C - Solisti: (pianoforte, violino, chitarra, flauto, clarinetto ed altri strumenti) riservata agli ex alunni delle Scuole Secondarie di primo grado ad indirizzo musicale e studenti dei Licei Musicali, nati dall’anno 2002)</li>
+                    </ul>
+                    Il programma libero, per la sezione solisti “A” e "C" prevede l’esecuzione al massimo di due brani tratti dal repertorio barocco, classico, romantico o moderno della durata massima complessiva di 5 minuti.
+                    I solisti che eseguiranno brani che prevedono un accompagnamento potranno eseguire il brano da soli oppure con una base registrata eventualmente anche in formato midi.
+                    L'iscrizione è totalmente gratuita e, proprio in virtù di questo, vista l'emergenza epidemiologica Covid-19,si richiede una donazione di € 10,00  da effettuare sul conto corrente della Protezione Civile intestato a Pres. Cons. Min. Dip. Prot. Civ. IBAN: IT84 Z030 6905 0201 0000 0066 387 BIC: BCITITMM con causale "Il Concorso Musicale Visconti non si ferma".
+                    Nel caso in cui uno dei membri della commissione abbia avuto contatti didattici con uno dei concorrenti esso dovrà obbligatoriamente astenersi dal voto.
+                    Il voto espresso dalla commissione è il risultato in centesimi della media ottenuta escludendo il voto più alto e il voto più basso. Nella valutazione la commissione terrà in debito conto l’età del candidato.
+                    Per ogni categoria di strumento risulterà vincitore il concorrente (sez. A)  che avrà riportato il punteggio più alto, uguale o superiore a 95 centesimi. Per la sezione C verrà designato come unico vincitore, tra tutte le categorie di strumenti, il concorrente che avrà riportato il punteggio più alto, uguale o superiore a 95 centesimi.
+                    La graduatoria finale verrà pubblicata sul sito venerdì 29 maggio.
+                    Nel 2021 verrà effettuato un concerto con la partecipazione di tutti i primi assoluti di ogni categoria.
+                    La commissione si riserva di far partecipare al concerto  anche altri partecipanti oltre ai vincitori che si siano particolarmente distinti nelle esecuzioni.
+                    Il giudizio della commissione è insindacabile.
+                    L’organizzazione si riserva di apportare modifiche al presente bando.
+                    La partecipazione al concorso comporta l’accettazione incondizionata del presente bando.
+                    Per ogni controversia sarà competente il Foro di Roma.
+                </p>
+            </div>
+        </div>
+    </section>
 
     <!--Carousel-->
     <!--<section id="carousel">
@@ -104,14 +148,8 @@
     <footer id="footer-main">
         <div class="container">
             <div class="row">
-                <div class="col-sm-3">
-                    <p>&reg; Concorso Musicale Visconti - 2020</p>
-                </div>
-                <div class="col-sm-3">
-
-                </div>
-                <div class="col-sm-3">
-
+                <div class="col-sm-9">
+                    <p><h6>&reg; Concorso Musicale Visconti - 2020</h6></p>
                 </div>
                 <div class="col-sm-3">
                     <h3>Contattaci&nbsp;<a href="mailto:perbach@libero.it?subject=XXVIII CONCORSO MUSICALE VISCONTI"><i class="fas fa-envelope"></i></a></h3>
@@ -119,7 +157,6 @@
             </div>
 
         </div>
-
     </footer>
 
 
