End Regolamento section and minor changes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <!--NavBar-->
-    <nav id="nav-main " class="navbar fixed-top navbar-expand-lg navbar-light bg-light ">
+    <nav id="nav-main" class="navbar fixed-top navbar-expand-lg navbar-light bg-light shadow">
         <a class="navbar-brand js-scroll-trigger" href="index.html"><i class="fas fa-music"></i></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -35,7 +35,7 @@
                     <a class="nav-link js-scroll-trigger" href="#Regolamento">Regolamento</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#">Commissione</a>
+                    <a class="nav-link js-scroll-trigger" href="#Commissione">Commissione</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#">Iscrizione</a>
@@ -49,20 +49,9 @@
             </ul>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link btn btn-secondary" href="#">Realizza un video!</a>
+                    <a class="nav-link btn btn-success" href="#">Realizza un video!</a>
                 </li>
             </ul>
-            <!--<li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Dropdown
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-            </li>-->
         </div>
     </nav>
 
@@ -91,35 +80,60 @@
     <section id="Regolamento">
         <div class="regolamento-content">
             <div class="container">
-                <h2>Regolamento</h2>
+                <h1 style="text-align:center">Regolamento</h1><br />
                 <p>
-                    La Fondazione “Luigi Granese” e la Scuola di Musica “G.Visconti”, visto il perdurare dello stato di allerta dovuto al CORONAVIRUS,  <strong>modificano il  XXVIII Concorso Musicale precedentemente bandito, per l’anno 2020, con una versione ONLINE.</strong>
+                    La Fondazione “Luigi Granese” e la Scuola di Musica “G.Visconti”, visto il perdurare dello stato di allerta dovuto al CORONAVIRUS, 
+                    <strong>
+                        modificano il  XXVIII Concorso Musicale precedentemente bandito, per l’anno 2020,
+                        con una versione <a href="#">ONLINE</a>.
+                    </strong>
                 </p>
                 <p>
-                    I concorrenti potranno partecipare inviando un file video unico della durata massima di 5 minuti con un programma libero composto al massimo da due brani.  Il video delle dimensioni massimo di 1 giga,  dovrà inquadrare esecutore e strumento, la registrazione che dovrà essere effettata dall'uscita del presente bando, deve essere realizzata senza interruzioni. Il file, unitamente alla domanda d'iscrizione e la ricevuta della donazione di € 10,00 intestato alla protezione civile dovrà essere inviato tramite WETRANSFER entro venerdì 8 Maggio con causale "Il Concorso Musicale Visconti non si ferma".
+                    I concorrenti potranno partecipare inviando un file video unico della durata massima di 5 minuti con un programma libero composto al massimo da due brani.  
+                    Il video delle dimensioni massimo di 1 giga,  dovrà inquadrare esecutore e strumento, la registrazione che dovrà essere effettata dall'uscita del presente bando, deve essere realizzata senza interruzioni. Il file, unitamente alla domanda d'iscrizione e la ricevuta della donazione di € 10,00 intestato alla protezione civile dovrà essere inviato tramite WETRANSFER entro venerdì 8 Maggio con causale "Il Concorso Musicale Visconti non si ferma".
                 </p>
                 <p>
                     Il concorso si articola nelle seguenti sezioni:
                     <ul>
-                        <li>A - Solisti: (pianoforte, archi, chitarra, flauto e clarinetto)</li>
-                        <li>C - Solisti: (pianoforte, violino, chitarra, flauto, clarinetto ed altri strumenti) riservata agli ex alunni delle Scuole Secondarie di primo grado ad indirizzo musicale e studenti dei Licei Musicali, nati dall’anno 2002)</li>
+                        <li><em>A - Solisti</em>: (pianoforte, archi, chitarra, flauto e clarinetto).</li>
+                        <li><em>C - Solisti</em>: (pianoforte, violino, chitarra, flauto, clarinetto ed altri strumenti) riservata agli ex alunni delle Scuole Secondarie di primo grado ad indirizzo musicale e studenti dei Licei Musicali, nati dall’anno 2002).</li>
                     </ul>
+                 </p>
+                <p>
                     Il programma libero, per la sezione solisti “A” e "C" prevede l’esecuzione al massimo di due brani tratti dal repertorio barocco, classico, romantico o moderno della durata massima complessiva di 5 minuti.
                     I solisti che eseguiranno brani che prevedono un accompagnamento potranno eseguire il brano da soli oppure con una base registrata eventualmente anche in formato midi.
-                    L'iscrizione è totalmente gratuita e, proprio in virtù di questo, vista l'emergenza epidemiologica Covid-19,si richiede una donazione di € 10,00  da effettuare sul conto corrente della Protezione Civile intestato a Pres. Cons. Min. Dip. Prot. Civ. IBAN: IT84 Z030 6905 0201 0000 0066 387 BIC: BCITITMM con causale "Il Concorso Musicale Visconti non si ferma".
+                    <br />
+                    <div class="important" style="border: 1px solid var(--red);">
+                        <em>
+                            <strong>
+                                L'iscrizione è totalmente gratuita e, proprio in virtù di questo, vista l'emergenza epidemiologica <a href="http://www.salute.gov.it/nuovocoronavirus" target="_blank">Covid-19</a>, si richiede una donazione di € 10,00  da effettuare sul conto corrente della Protezione Civile intestato a Pres. Cons. Min. Dip. Prot. Civ. IBAN: IT84 Z030 6905 0201 0000 0066 387 BIC: BCITITMM con causale "Il Concorso Musicale Visconti non si ferma".
+                            </strong>
+                        </em>
+                    </div>
+                    <br />
                     Nel caso in cui uno dei membri della commissione abbia avuto contatti didattici con uno dei concorrenti esso dovrà obbligatoriamente astenersi dal voto.
-                    Il voto espresso dalla commissione è il risultato in centesimi della media ottenuta escludendo il voto più alto e il voto più basso. Nella valutazione la commissione terrà in debito conto l’età del candidato.
-                    Per ogni categoria di strumento risulterà vincitore il concorrente (sez. A)  che avrà riportato il punteggio più alto, uguale o superiore a 95 centesimi. Per la sezione C verrà designato come unico vincitore, tra tutte le categorie di strumenti, il concorrente che avrà riportato il punteggio più alto, uguale o superiore a 95 centesimi.
-                    La graduatoria finale verrà pubblicata sul sito venerdì 29 maggio.
-                    Nel 2021 verrà effettuato un concerto con la partecipazione di tutti i primi assoluti di ogni categoria.
-                    La commissione si riserva di far partecipare al concerto  anche altri partecipanti oltre ai vincitori che si siano particolarmente distinti nelle esecuzioni.
-                    Il giudizio della commissione è insindacabile.
-                    L’organizzazione si riserva di apportare modifiche al presente bando.
-                    La partecipazione al concorso comporta l’accettazione incondizionata del presente bando.
-                    Per ogni controversia sarà competente il Foro di Roma.
+                    <br />Il voto espresso dalla commissione è il risultato in centesimi della media ottenuta escludendo il voto più alto e il voto più basso. Nella valutazione la commissione terrà in debito conto l’età del candidato.
+                    <br />Per ogni categoria di strumento risulterà vincitore il concorrente (sez. A)  che avrà riportato il punteggio più alto, uguale o superiore a 95 centesimi. 
+                    <br />Per la sezione C verrà designato come unico vincitore, tra tutte le categorie di strumenti, il concorrente che avrà riportato il punteggio più alto, uguale o superiore a 95 centesimi.
+                    <br />La graduatoria finale verrà pubblicata sul sito venerdì 29 maggio.
+                    <br />Nel 2021 verrà effettuato un concerto con la partecipazione di tutti i primi assoluti di ogni categoria.
+                    <br />La commissione si riserva di far partecipare al concerto  anche altri partecipanti oltre ai vincitori che si siano particolarmente distinti nelle esecuzioni.
+                    <br />Il giudizio della commissione è insindacabile.
+                    <br />L’organizzazione si riserva di apportare modifiche al presente bando.
+                    <br />La partecipazione al concorso comporta l’accettazione incondizionata del presente bando.
+                    <br />Per ogni controversia sarà competente il Foro di Roma.
                 </p>
             </div>
         </div>
+    </section>
+
+    <section id="Commissione">
+        <div class="Commissione-content">
+            <div class="container">
+                <h1 style="text-align:center">Commissione</h1><br />
+            </div>
+        </div>
+
     </section>
 
     <!--Carousel-->
@@ -147,6 +161,7 @@
     <!--Footer-->
     <footer id="footer-main">
         <div class="container">
+            <hr />
             <div class="row">
                 <div class="col-sm-9">
                     <p><h6>&reg; Concorso Musicale Visconti - 2020</h6></p>
