--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <!--Main Header-->
     <header class="masterhead">
-        <div class="container d-flex align-items-center h-100">
+        <div class="container d-flex align-items-center h-100 ">
             <div id="panel" class="mx-auto text-center">
                 <p>
                     <h1 class="display-4">XXVIII Concorso Musicale</h1>
@@ -103,7 +103,7 @@
                     Il programma libero, per la sezione solisti “A” e "C" prevede l’esecuzione al massimo di due brani tratti dal repertorio barocco, classico, romantico o moderno della durata massima complessiva di 5 minuti.
                     I solisti che eseguiranno brani che prevedono un accompagnamento potranno eseguire il brano da soli oppure con una base registrata eventualmente anche in formato midi.
                     <br />
-                    <div class="important" style="border: 1px solid var(--red);">
+                    <div class="important">
                         <em>
                             <strong>
                                 L'iscrizione è totalmente gratuita e, proprio in virtù di questo, vista l'emergenza epidemiologica <a href="http://www.salute.gov.it/nuovocoronavirus" target="_blank">Covid-19</a>, si richiede una donazione di € 10,00  da effettuare sul conto corrente della Protezione Civile intestato a Pres. Cons. Min. Dip. Prot. Civ. IBAN: IT84 Z030 6905 0201 0000 0066 387 BIC: BCITITMM con causale "Il Concorso Musicale Visconti non si ferma".
@@ -127,6 +127,7 @@
         </div>
     </section>
 
+    <!--Commissione-->
     <section id="Commissione">
         <div class="Commissione-content">
             <div class="container">
